.pipeline/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: klinematrix-prod
  labels:
    name: klinematrix-prod
    environment: prod
