.pipeline/k8s/overlays/prod/langfuse-clickhouse-prod-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: langfuse-clickhouse
spec:
  template:
    spec:
      imagePullSecrets:
      - name: acr-secret
